Add fast calculator implementation Add BaseCalculator